compilelog.log
t.c.obj -c /Users/maochun/esp32prj/Project_CAM/branch/ota_Client/ota_client/protocol/tcp_client/tcp_client.c
/Users/maochun/esp32prj/Project_CAM/branch/ota_Client/ota_client/protocol/tcp_client/tcp_client.c: In function 'tcp_client_start':
/Users/maochun/esp32prj/Project_CAM/branch/ota_Client/ota_client/protocol/tcp_client/tcp_client.c:47:5: error: implicit declaration of function 'msg_handler_on_connected' [-Wimplicit-function-declaration]
   47 |     msg_handler_on_connected(sock);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
/Users/maochun/esp32prj/Project_CAM/branch/ota_Client/ota_client/protocol/tcp_client/tcp_client.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^